terraform/23-aws-prject-1-public-private-vpc/IGW.tf
resource "aws_internet_gateway" "igw" {
  vpc_id=aws_vpc.vpc.id
  tags={
    Name="personal-igw"
  }
}
