terraform/23-aws-prject-1-public-private-vpc/RT-public.tf
resource "aws_route_table" "public_rt" {
	vpc_id=aws_vpc.vpc.id
	tags={
		Name="personal-public-RT"
	}
	route {
		cidr_block="0.0.0.0/0"
		gateway_id=aws_internet_gateway.igw.id
	}
}
