terraform/23-aws-prject-1-public-private-vpc/public-subnet.tf
resource "aws_subnet" "public_subnet" {
  vpc_id=aws_vpc.vpc.id
  cidr_block=var.public_subnet
  availability_zone=data.aws_availability_zones.all.names[0]
  map_public_ip_on_launch=true
  tags={
    Name="personal-public-subnet"
  }
}
