terraform/23-aws-prject-1-public-private-vpc/vpc.tf

resource "aws_vpc" "vpc" {
  cidr_block=var.vpc
  enable_dns_hostnames=true
  tags={
    Name="personal_vpc"
  }
}
